<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yazanmy.HajjAndUmrah_Guide.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_start"
        android:name="com.yazanmy.HajjAndUmrah_Guide.ui.StartGeo.StartGeoFragment"
        android:label="@string/menu_start"
        tools:layout="@layout/fragment_start" />

    <fragment
        android:id="@+id/nav_chatbot"
        android:name="com.yazanmy.HajjAndUmrah_Guide.ui.ChatBot.ChatBotFragment"
        android:label="@string/menu_chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/nav_offline"
        android:name="com.yazanmy.HajjAndUmrah_Guide.ui.Offline.OfflineFragment"
        android:label="@string/menu_offline"
        tools:layout="@layout/fragment_offline" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.yazanmy.HajjAndUmrah_Guide.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.yazanmy.HajjAndUmrah_Guide.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>